xay dung trang chi tiet packet va tao duong dan toi trang (chua xong)

--- a/src/Layouts/Destination/Destination.scss
+++ b/src/Layouts/Destination/Destination.scss
@@ -32,6 +32,11 @@
     z-index: -1;
 }
 
+.des__title-underline,
+.packages__title-underline {
+    margin-left: 8px;
+}
+
 .des__list {
     width: 100%;
     padding: 0;
