--- a/src/Layouts/Packets/Packets.scss
+++ b/src/Layouts/Packets/Packets.scss
@@ -1,3 +1,8 @@
+.packages__list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .packages-section {
     margin-top: 65px;
     box-sizing: border-box;
