Xay dung trang them goi packet

--- a/src/Layouts/Packets/Packets.scss
+++ b/src/Layouts/Packets/Packets.scss
@@ -144,7 +144,8 @@
     border-bottom: 1px solid #f1f1f1;
     letter-spacing: 2px;
 }
-.packages__item-destination-place i {
+.packages__item-destination-place-icon {
+    margin-right: 6px;
     font-size: 1.4rem;
 }
 
