xay dung chuc nang editva delete packet

--- a/src/pages/Management/PacketManage/PacketManage.scss
+++ b/src/pages/Management/PacketManage/PacketManage.scss
@@ -24,3 +24,27 @@
     padding: 6px 16px;
     margin-bottom: 4px;
 }
+
+// modal delete packet
+.modal-content {
+    min-height: 200px;
+}
+
+.modal-title {
+    font-size: 2rem;
+}
+.modal-body {
+    font-size: 1.8rem;
+}
+
+.btn {
+    font-size: 1.6rem;
+}
+
+.close {
+    font-size: 2rem ;
+    border: none;
+    background-color:transparent;
+}
+
+
