xay dung ky thuat delete soft, search packets theo price va chinh sua search packets

--- a/src/pages/Management/PacketHome/PacketHome.scss
+++ b/src/pages/Management/PacketHome/PacketHome.scss
@@ -11,6 +11,12 @@
 
 }
 
+.manage-icon {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 30px;
+}
+
 .manage-header-table {
     font-size: 1.6rem;
 }
