--- a/src/Layouts/DefaultLayouts/Header/Header.scss
+++ b/src/Layouts/DefaultLayouts/Header/Header.scss
@@ -54,11 +54,45 @@
 }
 
 .nav__icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 0 15px;
     text-decoration: none;
     font-size: 2.6rem;
     color: #bcbabc;
     cursor: pointer;
+}
+
+.nav__avatar-image {
+    max-width: 40px;
+    border-radius: 50%;
+}
+
+.nav__avatar-username {
+    font-size: 1.6rem;
+    color: #fff;
+}
+
+
+// tippy user
+
+.nav__wrapper-list {
+    min-width: 50px;
+    padding: 20px 0;
+    list-style: none;
+}
+
+.nav__wrapper-item {
+    width: 100%;
+    font-size: 2rem;
+    padding: 10px 30px;
+    cursor: pointer;
+    border-bottom: 1px solid #9a9a9a;
+}
+
+.nav__wrapper-item-name {
+    margin-left: 15px;
 }
 
 .navigation {
