--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -64,7 +64,7 @@
 
 .login__input-help {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     font-size: 1.2rem;
     color: #000;
     border: none;
